[package]
authors = ["Shaun Hamilton"]
description = "Simple, convenience macros and function for comparing."
categories = ["development-tools"]
edition = "2024"
keywords = ["compare", "struct", "fields", "macro"]
license = "MIT"
name = "cmp"
version = "1.0.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
